# collision-detection-system

./: README.md
husky_control/: package.xml
husky_description/: package.xml
husky_description/launch/: description.launch
husky_description/meshes/: clean.dae  cleaner.stl
husky_description/urdf/: husky.urdf.xacro
husky_description/urdf/accessories/: hokuyo_ust10.urdf.xacro
kshoonya_core/: CMakeLists.txt  package.xml
kshoonya_core/scripts/: collision_avoidance.py
kshoonya_gazebo/: CMakeLists.txt  package.xml
kshoonya_gazebo/launch/: robot.launch  world.launch
kshoonya_gazebo/worlds/: kshoonya_world.world  world_without_plane.world
